--- a/sw.descargamasiva/sw.descargamasiva.csproj
+++ b/sw.descargamasiva/sw.descargamasiva.csproj
@@ -12,6 +12,7 @@
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
     <TargetFrameworkProfile />
+    <LangVersion>8</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -35,6 +36,11 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
+    <Reference Include="System.Security.Cryptography.Xml, Version=7.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Security.Cryptography.Xml.7.0.0\lib\net462\System.Security.Cryptography.Xml.dll</HintPath>
+    </Reference>
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
@@ -45,20 +51,63 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AuthenticaV2.cs" />
+    <Compile Include="Connected Services\Autenticacion1\Autenticacion1.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Autenticacion1.svcmap</DependentUpon>
+    </Compile>
+    <Compile Include="Connected Services\SolicitaDescargaService1\SolicitaDescargaService1.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>SolicitaDescargaService1.svcmap</DependentUpon>
+    </Compile>
+    <Compile Include="Connected Services\VerificaSolicitudDescargaService1\VerificaSolicitudDescargaService1.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>VerificaSolicitudDescargaService1.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="DescargarSolicitud.cs" />
+    <Compile Include="GenerarSolicitudV2.cs" />
+    <Compile Include="Helpers\FullXmlTextWriter.cs" />
+    <Compile Include="Helpers\Serializer.cs" />
+    <Compile Include="Helpers\Signer.cs" />
+    <Compile Include="Interfaces\IParameters.cs" />
+    <Compile Include="Interfaces\ISatService.cs" />
+    <Compile Include="Models\AuthenticaParameters.cs" />
+    <Compile Include="Models\RequestDownloadParameters.cs" />
+    <Compile Include="Models\VerifyRequestDownloadParameters.cs" />
     <Compile Include="VerificaSolicitud.cs" />
     <Compile Include="Solicitud.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Autenticacion.cs" />
+    <Compile Include="Authenticacion.cs" />
     <Compile Include="SoapRequestBase.cs" />
+    <Compile Include="VerificaSolicitudV2.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="Resources\pfx.pfx">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    <None Include="Connected Services\Autenticacion1\Autenticacion1.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Autenticacion1.cs</LastGenOutput>
     </None>
+    <None Include="Connected Services\SolicitaDescargaService1\SolicitaDescargaService1.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>SolicitaDescargaService1.cs</LastGenOutput>
+    </None>
+    <None Include="Connected Services\VerificaSolicitudDescargaService1\VerificaSolicitudDescargaService1.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>VerificaSolicitudDescargaService1.cs</LastGenOutput>
+    </None>
+    <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Connected Services\Autenticacion1" />
+    <WCFMetadataStorage Include="Connected Services\SolicitaDescargaService1" />
+    <WCFMetadataStorage Include="Connected Services\VerificaSolicitudDescargaService1" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
